tests/errors/examples/pipe_to_non_function.vg
<!-- Expected Error: Type structure mismatch - piping to non-function
     Context: Right side of pipe operator is not a function
     
     The pipe operator requires the right side to be a function, but 'title' is a string.
-->
<view name="Test">
  <div>
    <div>{title}</div>
    <div>{name | title}</div>
  </div>
</view>
